# worker

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  .taplo.toml  Cargo.lock.bip39-fix  Cargo.toml  DESIGN.md  Dockerfile  Jenkinsfile  Makefile  README.md  UpdateRustSGXSDK.mk  build.Dockerfile  extract_identity  license_header_scs.txt  rust-toolchain.toml  test.Dockerfile
app/: Cargo.toml  build.rs
app-libs/assets-map/: Cargo.toml
app-libs/exchange-oracle/: Cargo.toml
app-libs/node-api-types/: Cargo.toml
app-libs/parentchain-interface/: Cargo.toml
app-libs/parentchain-specs/: Cargo.toml
app-libs/sgx-runtime/: Cargo.toml
app-libs/stf/: Cargo.toml
app/src/: cli.yml  constants.rs  counter.rs  create_keys.rs  enclave_api.rs  enclave_wrappers.rs  init_enclave.rs  main.rs  tests.rs  utils.rs  ws_server.rs
application-crypto/: Cargo.toml
application-crypto/src/: ed25519.rs  lib.rs  sr25519.rs  traits.rs
cli/: Cargo.toml  README.md  RaffleReadme.md  attesteer_dcap_quote_single_line.hex  attesteer_ias_attestation_report_single_line.hex  benchmark.sh  demo_attesteer.sh  demo_benchmark.sh  demo_connect_four.sh  demo_connect_four_two_workers.sh  demo_direct_call.sh  demo_direct_call_2_workers.sh  demo_energy_market.sh  demo_indirect_invocation.sh  demo_ocw_smart_contract.sh  demo_private_tx.sh  demo_raffle.sh  demo_rps.sh  demo_shield_on_second_node_with_transfer_to_alice.sh  demo_shielding_error.sh  demo_shielding_unshielding.sh  demo_shielding_unshielding_multiworker.sh  demo_shielding_unshielding_using_shard_vault.sh  demo_shielding_unshielding_using_shard_vault_on_target_a.sh  demo_sidechain.sh  demo_smart_contract.sh  demo_teeracle_generic.sh  demo_teeracle_whitelist.sh  integritee-cli  tcb_info_issuer_chain.pem  test_auto_shielding_with_transfer_bob.sh  test_shield_on_target_nodes_with_transfer_to_alice.sh
cli/src/: benchmark.rs  command_utils.rs  commands.rs  error.rs  evm_commands.rs  lib.rs  main.rs  rps_commands.rs  trusted_cli.rs  trusted_command_utils.rs  trusted_commands.rs  trusted_operation.rs
cli/tests/: basic_tests.rs
client/: Cargo.toml  README.md  bootstrap_demo_currency.sh  bot-community-sea-of-crete.sh  demo_direct_call.sh  demo_private_tx.sh  demo_shielding_unshielding.sh  substratee-client  test-locations-mediterranean.json  test-locations-sea-of-crete.json
client/src/: cli.yml  lib.rs  main.rs  ternoa_commands.rs
core-primitives/attestation-handler/: Cargo.toml  build.rs
core-primitives/binary-merkle-tree/: Cargo.toml
core-primitives/component-container/: Cargo.toml
core-primitives/enclave-api/: Cargo.toml  build.rs
core-primitives/enclave-bridge-storage/: Cargo.toml
core-primitives/enclave-metrics/: Cargo.toml
core-primitives/extrinsics-factory/: Cargo.toml
core-primitives/hashing/: Cargo.toml
core-primitives/import-queue/: Cargo.toml
enclave/: Cargo.toml  Enclave.config.production.xml  Enclave.config.xml  Enclave.edl  Makefile  rust-toolchain.toml
enclave-runtime/: Cargo.toml  Enclave.config.production.xml  Enclave.config.xml  Enclave.edl  Makefile  README.md  rust-toolchain.toml
enclave-runtime/src/: attestation.rs  beefy_merkle_tree.rs  cert.rs  dcap_attestation.rs  empty_impls.rs  error.rs  global_components.rs  initialization.rs  lib.rs  rpc.rs  rsa3072.rs  shard_config.rs  shard_creation_info.rs  shard_vault.rs  sidechain_block_composer.rs  sidechain_impl.rs  state.rs  sync.rs  tests.rs  tls_ra.rs  tls_ra_client.rs  tls_ra_server.rs  top_pool.rs  top_pool_execution.rs  top_pool_operation_executor.rs  utils.rs
enclave/balances/: Cargo.toml
enclave/chain_relay/: Cargo.toml
enclave/contract/: Cargo.toml
enclave/sgxwasm/: Cargo.toml
enclave/src/: aes.rs  attestation.rs  cert.rs  constants.rs  ed25519.rs  error.rs  genesis.rs  hex.rs  io.rs  ipfs.rs  lib.rs  rpc.rs  rpc_api.rs  rpc_server.rs  rsa3072.rs  runtime-wrapper.rs  runtime_wrapper.rs  state.rs  tests.rs  tls.rs  tls_ra.rs  top_pool.rs  transaction_pool.rs  utils.rs  wasm.rs  worker_api_direct.rs
enclave/stf/: Cargo.toml
enclave/wasm/: Cargo.toml  build.sh
service/: Cargo.toml  build.rs
service/src/: account_funding.rs  alive_service.rs  cli.yml  config.rs  error.rs  global_peer_updater.rs  initialized_service.rs  interval_scheduling.rs  main.rs  main_impl.rs  node_api_factory.rs  parentchain_block_syncer.rs  parentchain_config.rs  parentchain_handler.rs  prometheus_metrics.rs  request_keys.rs  setup.rs  sidechain_setup.rs  sync_block_broadcaster.rs  sync_block_gossiper.rs  sync_state.rs  teeracle_metrics.rs  utils.rs  wasm.rs  worker.rs  worker_peers_updater.rs
sidechain/: Cargo.toml
sidechain/block-composer/: Cargo.toml
sidechain/block-header-cache/: Cargo.toml
sidechain/block-verification/: Cargo.toml
sidechain/fork-tree/: Cargo.toml
sidechain/peer-fetch/: Cargo.toml
sidechain/primitives/: Cargo.toml
sidechain/rpc-handler/: Cargo.toml
sidechain/sidechain-crate/: Cargo.toml
sidechain/src/: lib.rs  validateer.rs
sidechain/state/: Cargo.toml
sidechain/storage/: Cargo.toml
sidechain/test/: Cargo.toml
sidechain/top-pool/: Cargo.toml
sidechain/top-pool-executor/: Cargo.toml
sidechain/top-pool-rpc-author/: Cargo.toml
sidechain/validateer-fetch/: Cargo.toml
stf/: Cargo.toml
stf/src/: cli.rs  lib.rs  runtime_wrapper.rs  sgx.rs  stf_sgx.rs  stf_sgx_primitives.rs  test_genesis.rs  tests.rs
substratee-node-calls/: Cargo.toml
substratee-node-calls/src/: lib.rs
substratee-node-primitives/: Cargo.toml
substratee-node-primitives/src/: lib.rs
substratee-worker-primitives/: Cargo.toml
substratee-worker-primitives/src/: block.rs  lib.rs
worker/: Cargo.toml  build.rs
worker/rpc/: Cargo.toml
worker/src/: api.rs  attestation_ocalls.rs  cli.yml  config.rs  constants.rs  enclave_api.rs  enclave_tls_ra.rs  enclave_wasm.rs  enclave_wrappers.rs  error.rs  init_enclave.rs  ipfs.rs  main.rs  node_api_factory.rs  rpc-api.rs  sidechain_storage.rs  sync_block_gossiper.rs  test_enclave.rs  tokio_handle_accessor.rs  utils.rs  wasm.rs  wasm_def.rs  worker.rs  worker_accessor.rs  ws_server.rs
(+1307 files in other folders)
