[package]
name = "app"
version = "0.1.0"
authors = ["Alain Brenzikofer"]
build = "build.rs"

[dependencies]
hex = "0.3"
dirs = "1.0.2"
rust-base58 = "*"
rust-crypto = "*"
serde_json = "1.0"
clap = { version = "2.33", features = [ "yaml" ] }
sgx_urts = { git = "https://github.com/baidu/rust-sgx-sdk" }
sgx_types = { git = "https://github.com/baidu/rust-sgx-sdk" }
sgx_tseal = { git = "https://github.com/baidu/rust-sgx-sdk" }
sgx_crypto_helper = { git = "https://github.com/baidu/rust-sgx-sdk", default-features = false}
substrate-api-client = { git = "https://github.com/scs/substrate-api-client.git", branch = "substratee-runtime" }
balances = { package = "srml-balances", git = "https://github.com/brenzi/substrate.git", branch="global-allocator-feature" }
my_node_runtime = { package = "substratee-node-runtime", git = "https://github.com/scs/substraTEE-node.git" }

