[package]
name = "substratee_worker"
version = "1.0.0"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
build = "build.rs"

[dependencies]
ws = "*"
hex = "0.3"
dirs = "1.0.2"
clap = { version = "2.33", features = [ "yaml" ] }
env_logger = "*"
serde_json = "1.0"
rust-base58 = "*"
rust-crypto = "*"

parity-codec = { version = "3.0", default-features = false }
primitive-types = { version = "0.2", default-features = false, features = ["codec"] }

sgx_urts = { git = "https://github.com/baidu/rust-sgx-sdk" }
sgx_types = { git = "https://github.com/baidu/rust-sgx-sdk" }
sgx_tseal = { git = "https://github.com/baidu/rust-sgx-sdk" }
sgx_crypto_helper = { git = "https://github.com/baidu/rust-sgx-sdk", default-features = false}

[dependencies.substrate-api-client]
git = "https://github.com/scs/substrate-api-client"
branch = 'marcel-preparationM1'

[dependencies.my_node_runtime]
git = "https://github.com/scs/substraTEE-node"
branch = "brenzi-v200"
package = "substratee-node-runtime"
default-features = false
features = ["no_global_allocator"]

[dependencies.balances]
git = "https://github.com/paritytech/substrate"
rev = "6e67eff0653677d3d01980ca822c4b8a227914a3"
package = "srml-balances"

[dependencies.node-primitives]
git = "https://github.com/paritytech/substrate"
rev = "6e67eff0653677d3d01980ca822c4b8a227914a3"

[dependencies.primitives]
git = "https://github.com/paritytech/substrate"
rev = "6e67eff0653677d3d01980ca822c4b8a227914a3"
package = "substrate-primitives"

[dependencies.substrate-keyring]
git = "https://github.com/paritytech/substrate"
rev = "6e67eff0653677d3d01980ca822c4b8a227914a3"

[dependencies.system]
git = "https://github.com/paritytech/substrate"
rev = "6e67eff0653677d3d01980ca822c4b8a227914a3"
package = "srml-system"

[features]
default = ["std"]
std = [
	"primitives/std",
	"parity-codec/std",
	"my_node_runtime/std",
]
