[package]
name = "substrate-application-crypto"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
description = "Provides facilities for generating application specific crypto wrapper types."

[dependencies]
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true, features = ["derive"] }

[dependencies.runtime-io]
git = 'https://github.com/paritytech/substrate'
rev = 'f17d023bbe179f15678ac9989f471c9b18917e17'
package = "sr-io"
default-features = false

[dependencies.rstd]
git = 'https://github.com/paritytech/substrate'
rev = 'f17d023bbe179f15678ac9989f471c9b18917e17'
package = "sr-std"
default-features = false

[dependencies.primitives]
git = 'https://github.com/paritytech/substrate'
rev = 'f17d023bbe179f15678ac9989f471c9b18917e17'
package = "substrate-primitives"
default-features = false

[dev-dependencies]
#test-client = { package = "substrate-test-runtime-client", path = "../test-runtime/client" }
sr-primitives = { git = 'https://github.com/paritytech/substrate', rev = 'f17d023bbe179f15678ac9989f471c9b18917e17'}

[features]
default = [ "std" ]
std = [ "primitives/std", "codec/std", "serde", "rstd/std", "runtime-io/std" ]
