[package]
name = "integritee-cli"
version = "0.15.12"
authors = ["Integritee AG <hello@integritee.network>"]
edition = "2021"

[dependencies]
array-bytes = { version = "6.0.0" }
base58 = "0.2"
chrono = "*"
clap = { version = "3.1.6", features = ["derive"] }
codec = { version = "3.0.0", package = "parity-scale-codec", features = ["derive"] }
env_logger = "0.9"
hdrhistogram = "7.5.0"
hex = "0.4.2"
log = "0.4"
prometheus = "0.10.0"
rand = "0.8.5"
rayon = "1.5.1"
regex = "1.9.5"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sgx_crypto_helper = { branch = "master", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
urlencoding = "2.1.3"
warp = "0.3.7"

# scs / integritee
enclave-bridge-primitives = { git = "https://github.com/integritee-network/pallets.git", branch = "sdk-v0.13.0-polkadot-v0.9.42" }
ita-parentchain-interface = { path = "../app-libs/parentchain-interface" }
pallet-enclave-bridge = { git = "https://github.com/integritee-network/pallets.git", branch = "sdk-v0.13.0-polkadot-v0.9.42" }
pallet-evm = { optional = true, git = "https://github.com/integritee-network/frontier.git", branch = "bar/polkadot-v0.9.42" }
pallet-sidechain = { git = "https://github.com/integritee-network/pallets.git", branch = "sdk-v0.13.0-polkadot-v0.9.42" }
pallet-teeracle = { git = "https://github.com/integritee-network/pallets.git", branch = "sdk-v0.13.0-polkadot-v0.9.42" }
pallet-teerex = { git = "https://github.com/integritee-network/pallets.git", branch = "sdk-v0.13.0-polkadot-v0.9.42" }
teeracle-primitives = { git = "https://github.com/integritee-network/pallets.git", branch = "sdk-v0.13.0-polkadot-v0.9.42" }

# `default-features = false` to remove the jsonrpsee dependency.
# disable unsupported jsonrpcsee
substrate-api-client = { default-features = false, features = ["std", "sync-api"], git = "https://github.com/encointer/substrate-api-client.git", branch = "v0.9.42-tag-v0.14.0-retracted-check-metadata-hash" }
substrate-client-keystore = { git = "https://github.com/encointer/substrate-api-client.git", branch = "v0.9.42-tag-v0.14.0-retracted-check-metadata-hash" }

# substrate dependencies
pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-keyring = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-keystore = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }

# local dependencies
ita-stf = { path = "../app-libs/stf" }
itc-rpc-client = { path = "../core/rpc-client" }
itp-node-api = { path = "../core-primitives/node-api" }
itp-rpc = { path = "../core-primitives/rpc" }
itp-sgx-crypto = { path = "../core-primitives/sgx/crypto" }
itp-stf-primitives = { path = "../core-primitives/stf-primitives" }
itp-time-utils = { path = "../core-primitives/time-utils" }
itp-types = { path = "../core-primitives/types" }
itp-utils = { path = "../core-primitives/utils" }
its-primitives = { path = "../sidechain/primitives" }
pallet-notes = { path = "../app-libs/sgx-runtime/pallets/notes" }
pallet-session-proxy = { path = "../app-libs/sgx-runtime/pallets/session-proxy" }

[features]
default = []
evm = ["ita-stf/evm", "pallet-evm"]
teeracle = []
sidechain = []
offchain-worker = []
production = []
# dcap feature flag is not used in this crate, but for easier build purposes only it present here as well
dcap = []
