[package]
name = "substratee-client"
version = "0.6.5-sub2.0.0-alpha.7"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
edition = "2018"

[dependencies]
log = "0.4"
env_logger = "0.7"
hex = "0.4"
json = "0.12.0"
substrate-bip39 = "0.3.1"
tiny-bip39 = "0.6.2"
serde_json = "1.0"
clap = "2.33"
clap-nested = "0.3.1"
primitive-types = { version = "0.6.1", default-features = false, features = ["codec"] }
base58 			        = "0.1"
chrono = "*"
blake2-rfc      = { version = "0.2.18", default-features = false}

[dependencies.substrate-api-client]
git = "https://github.com/scs/substrate-api-client"
tag = "v0.4.6-sub2.0.0-alpha.7"

[dependencies.serde]
features = ["derive"]
optional = true
version = "1.0"

[dependencies.codec]
default-features = false
package = "parity-scale-codec"
features = ["derive"]
version = "1.3.0"

[dependencies.sp-core]
version = '2.0.0-alpha.7'

[dependencies.sp-runtime]
version = '2.0.0-alpha.7'

[dependencies.sc-keystore]
version = '2.0.0-alpha.7'

[dependencies.pallet-balances]
version = '2.0.0-alpha.7'
default-features=false

[dependencies.frame-system]
version = '2.0.0-alpha.7'
default-features=false

[dependencies.substratee-node-runtime]
git = "https://github.com/scs/substraTEE-node"
tag = "v0.6.6-sub2.0.0-alpha.7"
package = "substratee-node-runtime"

[dependencies.substratee-stf]
path = "../stf"

[dependencies.substratee-worker-api]
path = "../worker/worker-api"

[dependencies.sp-keyring]
version = '2.0.0-alpha.7'

[dependencies.sp-application-crypto]
version = '2.0.0-alpha.7'

#[patch.crates-io]
#ed25519-dalek = { git = "https://github.com/scs/ed25519-dalek.git", branch = "no_std_sgx"}