[package]
name = "substratee-client"
version = "0.8.0"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
edition = "2018"

[dependencies]
log = "0.4"
env_logger = "0.7"
hex = "0.4"
json = "0.12.0"
substrate-bip39 = "0.3.1"
tiny-bip39 = "0.6.2"
serde_json = "1.0"
clap = "2.33"
clap-nested = "0.3.1"
primitive-types = { version = "0.6.1", default-features = false, features = ["codec"] }
base58 			        = "0.1"
chrono = "*"
blake2-rfc      = { version = "0.2.18", default-features = false}
geojson = "0.17"
ws = { version = "0.7", features = ["ssl"] } 

[dependencies.substrate-api-client]
git = "https://github.com/scs/substrate-api-client"
tag = "v0.4.13"

[dependencies.substrate-client-keystore]
git = "https://github.com/scs/substrate-api-client"
tag = "v0.4.13"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.codec]
default-features = false
package = "parity-scale-codec"
features = ["derive"]
version = "1.3.1"

[dependencies.sp-runtime]
git = "https://github.com/paritytech/substrate.git"
rev = "a208da16"

[dependencies.sc-keystore]
git = "https://github.com/paritytech/substrate.git"
rev = "a208da16"

[dependencies.pallet-balances]
git = "https://github.com/paritytech/substrate.git"
rev = "a208da16"
default-features=false

[dependencies.frame-system]
git = "https://github.com/paritytech/substrate.git"
rev = "a208da16"
default-features=false

[dependencies.my-node-runtime]
git = "https://github.com/scs/substraTEE-node"
tag = "v0.7.0"
package = "substratee-node-runtime"

[dependencies.substratee-worker-primitives]
path = "../substratee-worker-primitives"

[dependencies.substratee-stf]
path = "../stf"

[dependencies.substratee-worker-api]
path = "../worker/worker-api"

[dependencies.sp-keyring]
git = "https://github.com/paritytech/substrate.git"
rev = "a208da16"

[dependencies.sp-application-crypto]
git = "https://github.com/paritytech/substrate.git"
rev = "a208da16"

[dependencies.sp-core]
git = "https://github.com/paritytech/substrate.git"
rev = "a208da16"

#[patch.crates-io]
#ed25519-dalek = { git = "https://github.com/scs/ed25519-dalek.git", branch = "no_std_sgx"}