[package]
name = "substratee-client"
version = "0.8.0"
authors = ["Supercomputing Systems AG <info@scs.ch>"]
edition = "2018"

[dependencies]
log = "0.4"
env_logger = "0.7"
hex = "0.4.2"
json = "0.12.0"
substrate-bip39 = "0.3.1"
tiny-bip39 = "0.6.2"
serde_json = "1.0"
clap = "2.33"
clap-nested = "0.3.1"
primitive-types = { version = "0.6.1", default-features = false, features = ["codec"] }
base58 			        = "0.1"
chrono = "*"
blake2-rfc      = { version = "0.2.18", default-features = false}
geojson = "0.17"
ws = { version = "0.7", features = ["ssl"] }
sgx_crypto_helper = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }

[dependencies.substrate-api-client]
git = "https://github.com/scs/substrate-api-client"

[dependencies.substrate-client-keystore]
git = "https://github.com/scs/substrate-api-client"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.codec]
default-features = false
package = "parity-scale-codec"
features = ["derive"]
version = "2.0.0"

[dependencies.sp-runtime]
git = "https://github.com/paritytech/substrate.git"
version = "3.0.0"

[dependencies.sc-keystore]
git = "https://github.com/paritytech/substrate.git"
version = "3.0.0"

[dependencies.pallet-balances]
git = "https://github.com/paritytech/substrate.git"
version = "3.0.0"
default-features=false

[dependencies.frame-system]
git = "https://github.com/paritytech/substrate.git"
version = "3.0.0"
default-features=false

[dependencies.my-node-runtime]
git = "https://github.com/scs/substraTEE-node"
package = "substratee-node-runtime"

[dependencies.substratee-worker-primitives]
path = "../primitives/worker"

[dependencies.substratee-node-primitives]
path = "../primitives/node"

[dependencies.substratee-api-client-extensions]
path = "../primitives/api-client-extensions"

[dependencies.substratee-stf]
path = "../stf"

[dependencies.substratee-worker-api]
path = "../worker/worker-api"

[dependencies.sp-keyring]
git = "https://github.com/paritytech/substrate.git"
version = "3.0.0"

[dependencies.sp-application-crypto]
git = "https://github.com/paritytech/substrate.git"
version = "3.0.0"

[dependencies.sp-core]
git = "https://github.com/paritytech/substrate.git"
version = "3.0.0"

#[patch.crates-io]
#ed25519-dalek = { git = "https://github.com/scs/ed25519-dalek.git", branch = "no_std_sgx"}